# robot_controllers

./: contributors.txt  inertia.txt  paramNames  paramNames~
robbie_auto/: CMakeLists.txt  (+4 more)
robbie_control/: CMakeLists.txt  CMakeLists.txt~  package.xml
robbie_control/RobotClass/: DH.m  IK_xlsx.xlsx  README.txt  aerobot.m  animate_config.m  class_test.m  fk_test.asv  plotCircle3D.m  robot.asv  robot.m
robbie_control/analyses/: aerobot_analysis.m  aerobot_analysis_2.m  aerobot_analysis_3.m  run.m  run_2.m  run_3.m
robbie_control/analysis/: aerobot_analysis.m
robbie_control/config/: import rospy.py  robbie_balance_controller.yaml  robbie_control.yaml  robbie_control.yaml~  robbie_control2.yaml  robbie_objective_controllers.yaml  robbie_trajectory_control.yaml  shank_angle.py  shank_pub  shank_pub.py  sub_pub.py
robbie_control/launch/: robbie_control.launch  robbie_control.launch~  robbie_control2.launch  robbie_move.launch  robbie_objective_control.launch  robbie_trajectory_control.launch
robbie_control/rosbags/: height_adjust.bag  manual_step_climbing.bag  modeA.bag  modeB.bag  modeC.bag  modeD.bag  test_crevice_crossing.bag
robbie_control/scripts/: robot_control.py  robot_control.py~
robbie_control/src/: Manual_step_climbing.txt  Robbie.py  location_publisher.py  move_robbie.py  plotly_example.py  robbie_follower.py  robot_control.cpp  robot_control.cpp~  sample_bag_0.6.bag  sample_bag_0.9.bag  sample_bag_1.bag  smach_stand.py  smach_stand_exp.py  steering_robot.perspective  whole_body_action_controller.py  whole_body_action_controller_exp.original.py  (+1 more)
(+89 files in other folders)
